fix: form,list vulnerability, added: folder structure for services

--- a/front-vtracker/src/app/crud-agent/pages/abm-form/abm-form.component.html
+++ b/front-vtracker/src/app/crud-agent/pages/abm-form/abm-form.component.html
@@ -5,23 +5,46 @@
         <h2>Agents</h2>
 
         <div class="form-group form-style">
-          <input type="text" [formControl]="name" class="form-control" placeholder="Name" />
+          <input
+            type="text"
+            [formControl]="name"
+            class="form-control"
+            placeholder="Name"
+          />
         </div>
 
         <div class="form-group form-style">
-          <input type="text" [formControl]="description" class="form-control" placeholder="Description" />
+          <input
+            type="text"
+            [formControl]="description"
+            class="form-control"
+            placeholder="Description"
+          />
         </div>
 
-        <button (click)="previousValues()" type="button" class="btn">Reset Agents</button>
+        <button (click)="previousValues()" type="button" class="btn">
+          Reset Agent
+        </button>
 
-        <button mat-buttom (click)="updateAgent()" type="button" class="btn btn-primary mb-2" *ngIf="isUpdateChecker()">
+        <button
+          mat-buttom
+          (click)="updateAgent()"
+          type="button"
+          class="btn btn-primary mb-2"
+          *ngIf="isUpdateChecker()"
+        >
           Confirm
         </button>
 
-        <button mat-buttom (click)="createAgent()" type="button" class="btn btn-primary mb-2" *ngIf="!isUpdateChecker()">
+        <button
+          mat-buttom
+          (click)="createAgent()"
+          type="button"
+          class="btn btn-primary mb-2"
+          *ngIf="!isUpdateChecker()"
+        >
           Create
         </button>
-
       </form>
     </div>
   </div>
